feat: R5 support (#44)
* feat: R5 support (WIP)

* feat: R5 support (WIP)

* feat: R5 support (WIP)

* feat: R5 support (WIP)

* fix: Replace JDK 16 toList() by JDK 11 alternative

Fix #42

* fix: Replace JDK 16 toList() by JDK 11 alternative

Fix #42

* feat: R5 support (WIP)

* feat: R5 support (WIP)

* feat: R5 support (WIP)