@@ -3,6 +3,7 @@ package io.github.jy95.fds.common.functions;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Locale;
+import java.util.stream.Collectors;
 
 /**
  * Interface for formatting DateTime objects into human-readable strings.
@@ -32,6 +33,6 @@ public interface FormatDateTimes<T> {
         return Arrays
                 .stream(dates)
                 .map(date -> convert(locale, date))
-                .toList();
+                .collect(Collectors.toList());
     }
 }
